--- a/uhunt/app/src/main/res/values/strings.xml
+++ b/uhunt/app/src/main/res/values/strings.xml
@@ -37,9 +37,7 @@
     <string name="rate_this">Rate This</string>
     <string name="solved_and_submission_text">Solved: %d ,Submissions: %d</string>
     <string name="tried_but_failed_text">Tried but not yet solved: %d</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragment_about">About</string>
+    <string name="msg_error_username">Error: Username can\'t be empty</string>
 
 </resources>
