--- a/uhunt/app/src/main/res/values/strings.xml
+++ b/uhunt/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="tried_but_failed_text">Tried but not yet solved: %d</string>
     <string name="fragment_about">About</string>
     <string name="msg_error_username">Error: Username can\'t be empty</string>
+    <string name="fragment_cpbook">CP Book</string>
 
 </resources>
