--- a/uhunt/app/src/main/res/values/strings.xml
+++ b/uhunt/app/src/main/res/values/strings.xml
@@ -6,6 +6,31 @@
     <string name="drawer_close">close</string>
     <string name="search_input_text">Enter Problem ID</string>
 
+    <string name="solved_problem_level">Solved Problem Level</string>
+    <string name="about_uhunt">About uHunt</string>
+    <string name="settings">Settings</string>
+    <string name="feedback">Feedback</string>
+    <string name="empty">No Data</string>
+    <string name="browse_problems">Browse Problems</string>
+    <string name="feedback_form_hints">Type your message here</string>
+    <string name="btn_txt">Send Feedback</string>
+    <string name="url_market_app">market://details?id=</string>
+    <string name="url_playstore_web">http://play.google.com/store/apps/details?id=</string>
+    <string name="username">Username</string>
+
+
+    <string name="login">Login</string>
+    <string name="fragment_profile">Profile</string>
+    <string name="activity_login_title">Login</string>
+    <string name="rate_this">Rate This</string>
+    <string name="solved_and_submission_text">Solved: %d ,Submissions: %d</string>
+    <string name="tried_but_failed_text">Tried but not yet solved: %d</string>
+    <string name="fragment_about">About</string>
+    <string name="msg_error_username">Error: Username can\'t be empty</string>
+    <string name="fragment_cpbook">CP Book</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
     <string-array name="navigation_drawer">
         <item>Profile</item>
         <!-- <item>Progress over the Years</item> -->
@@ -18,26 +43,5 @@
         <item>Live Submissions</item>
         <item>Problem Statistics</item>
     </string-array>
-    <string name="solved_problem_level">Solved Problem Level</string>
-    <string name="about_uhunt">About uHunt</string>
-    <string name="settings">Settings</string>
-    <string name="feedback">Feedback</string>
-    <string name="empty">No Data</string>
-    <string name="browse_problems">Browse Problems</string>
-    <string name="feedback_form_hints">Type your message here</string>
-    <string name="btn_txt">Send Feedback</string>
-    <string name="url_market_app">market://details?id=</string>
-    <string name="url_playstore_web">http://play.google.com/store/apps/details?id=</string>
-
-
-    <string name="username">Username</string>
-    <string name="login">Login</string>
-    <string name="fragment_profile">Profile</string>
-    <string name="activity_login_title">Login</string>
-    <string name="rate_this">Rate This</string>
-    <string name="solved_and_submission_text">Solved: %d ,Submissions: %d</string>
-    <string name="tried_but_failed_text">Tried but not yet solved: %d</string>
-    <string name="fragment_about">About</string>
-    <string name="msg_error_username">Error: Username can\'t be empty</string>
 
 </resources>
